	- Added support for asset tags with non numeric characters.
	- Changed the log on the user and device page to show both old and new values by default.
	- Modified the tag list on the search page to only include active devices.
	- Added the LibreNMS graph to a device's pages if the device type is Access Point.
	- Changed the visible columns when viewing inside/outside access.  A previous update messed them up.
	- Updated LibreNMS URL to work after update to LibreNMS.
	- Added Chromebooks and Laptops by year to the stats page, they can be turned on and off in the code.
	- Added support for PreSchool
	- Fixed a bug in the student edit mode when not showing the password.  It wouldn't exit exit mode.
	- Added the ability to set generic images based on device type.  If a device's model image is missing 
		then device type image will be used if present.  Otherwise the generic image is used.
	- Fixed a bug that would prevent you from disabling or enabling a device from a mobile device.
	- Added the computer name to the user's section of the website.
	- Added Titan support to inventory update script.
	- Added the ability to disable remote DNS filtering using a tag.
	- Added auto computer name for MacBooks with a class of tag in the format 20xx.
	- Fixed the way buttons, text boxes, and dropdowns appear after Chrome 83.
	- Fixed Inside and Outside access over the past week cards if the values are 0 for an entry.
	- Changed the flow when creating new student accounts.  Now it's fully automated.
	- Changed Events so you can't set Event Type or Category to nothing after opening an event.
	- Change the Update Event button to a save icon on the device and events pages.
	- Added the ability to delete an open event from the device page.
	- Added a password generator page that will generate a unique password. /admin/generatepw.asp

0.063
	- Added the ability to disable remote proxy filtering using a tag.