@@ -133,14 +133,14 @@ input[type=submit] {
 	display:inline-block;
 	position:relative;
 	right:-155px;
-	top:-80px;
+	top:-83px;
 	height: 0px;
 }
 .ViewButtonMobile {
 	display:inline-block;
 	position:relative;
 	right:-155px;
-	top:-83px;
+	top:-88px;
 	height: 0px;
 }
 .ViewButtonUser {
@@ -178,6 +178,13 @@ input[type=submit] {
 
 .InputWidthDate {
 	width: 70px;
+}
+
+.TextBox {
+	width: 98%;
+	background-color: #E8E8E8;
+	border-radius: 5px;
+	border: 2px solid #999;
 }
 
 .Header {
@@ -688,4 +695,73 @@ svg > g > g:last-child {
 	 background-color: #5cb85c;
 	 color: white;
 	 border-radius: 10px;
+}
+
+/* Add fixes for iPads here */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1366px) {
+	.InputWidthSmall {
+		width: 75px;
+	}
+	.ViewButton {
+		display:inline-block;
+		position:relative;
+		right:-155px;
+		top:-90px;
+		height: 0px;
+	}
+	.TextBox {
+		width: 95%;
+	}
+}
+
+/* Add fixes for iPhones here */
+@media	
+	only screen and (-webkit-min-device-pixel-ratio: 3),
+	only screen and (   min--moz-device-pixel-ratio: 3),
+	only screen and (     -o-min-device-pixel-ratio: 3/1),
+	only screen and (        min-device-pixel-ratio: 3),
+	only screen and (                min-resolution: 384dpi),
+	only screen and (                min-resolution: 3dppx) { 
+		.InputWidthSmall {
+			width: 75px;
+		}
+		.TextBox {
+			width: 95%;
+		}
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1366px) and (orientation : portrait) {
+	div.Col3Card {
+		width: 330px;
+		border: 1px solid black;
+		margin: 5px;
+		display:inline-block;
+		border-radius: 10px;
+		box-shadow: 4px 4px 8px 0 #BFBFBF;
+		transition: 0.3s;
+		text-align: left;
+		padding: 7px;
+		vertical-align: top;
+	}
+	div.Col3CardTitle {
+		text-align:center;
+		background-color: #0B0B61; /* 0B0B61 461B7E */
+		color: white;
+		border: 1px solid black;
+		border-radius: 10px 10px 0px 0px;
+		padding-bottom: 5px;
+		padding-top: 5px;
+		width: 344px;
+		position: relative;
+		left: -8px;
+		top: -8px;
+	}
+
+}
+
+/* Add fixes for 12.9in iPad Pros */
+@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (orientation : portrait) {
+	body {
+		zoom: 90%;
+	}
 }
